<resources>
    <!-- Common values -->
    <string name="app_name" translatable="false">TravelAssistant</string>
    <string name="navigation_drawer_open" translatable="true">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="true">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Travel Assistant</string>
    <string name="nav_header_subtitle" translatable="false">Created by Nikolay Moskal © 2018–2019</string>
    <string name="nav_header_desc" translatable="true">Navigation header</string>

    <!-- Input activity -->
    <string name="title_activity_input" translatable="true">Input the data</string>
    <string name="arv_label" translatable="true">Where are you going?</string>
    <string name="arv_city_title" translatable="true">City code</string>
    <string name="arv_city_hint" translatable="true">City name</string>
    <string name="send_button" translatable="true">Send</string>

    <string name="gender_type_label" translatable="true">For whom we select a list of things?</string>

    <string name="travel_dates_label" translatable="true">Travel dates</string>
    <string name="start_date_title" translatable="true">From</string>
    <string name="end_date_title" translatable="true">To</string>

    <string name="type_label" translatable="true">Which transport you\'ll select?</string>

    <string name="target_label" translatable="true">What is the purpose of your trip?</string>

    <string name="list_item_icon_description" translatable="false">Icon</string>
    <string name="city_select_title">Select a city</string>

    <!-- Navigation drawer menu -->
    <string name="nav_main" translatable="true">Main</string>
    <string name="nav_things" translatable="true">Pack</string>
    <string name="nav_informer" translatable="true">Informer</string>
    <string name="nav_about" translatable="true">About</string>
    <string name="nav_manage" translatable="true">Settings</string>

    <!-- Settings activity -->
    <string name="title_activity_settings" translatable="true">Settings</string>
    <string name="title_language">Language</string>
    <string-array name="languages">
        <item>English (default)</item>
        <item>Russian</item>
    </string-array>
    <string name="title_temperature_unit">Temperature unit</string>
    <string-array name="temperature_units">
        <item>Kelvin</item>
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="temperature_units_sign">
        <item>ºK</item>
        <item>ºC</item>
        <item>ºF</item>
    </string-array>
    <string-array name="server_temperature_units">
        <item>Standard</item>
        <item>metric</item>
        <item>imperial</item>
    </string-array>
    <string name="title_disable_warnings">Disable warnings</string>
    <string name="title_disable_errors">Disable errors</string>

    <!-- Pack activity -->
    <string name="title_activity_pack" translatable="true">All lists</string>
    <string-array name="context_menu">
        <item>Edit list</item>
        <item>Remove list</item>
    </string-array>
    <string name="action_delete" translatable="true">Remove</string>
    <string name="action_delete_all" translatable="true">Remove all</string>
    <string name="delete_confirm_title">Do you really want to delete all listings?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>

    <!-- Preview activity -->
    <string name="title_activity_preview" translatable="true">List preview</string>
    <string name="need" translatable="true">The most necessary</string>
    <string name="action_save_list">Save list</string>
    <string name="action_dismiss_warnings">Disable warnings</string>
    <string name="action_disable_errors">Disable error messages</string>
    <string name="weight_warning">Your luggage exceeds the weight of hand luggage</string>
    <string name="current_weight_message">Current weight is</string>
    <string name="mass_unit_abbr">kg</string>
    <string name="weight_error">Your luggage exceeds the maximum weight</string>

    <!-- About activity -->
    <string name="title_activity_about">About</string>
    <string name="app_description">A small, fast and flexible application. It performs one main function and performs it perfectly
    - collecting your luggage. You don\'t care about it now. This application will do it for you!</string>
</resources>
