<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@android:drawable/btn_star"
            android:title="@string/nav_main"/>
        <item
            android:id="@+id/nav_things"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/nav_things" />
        <item
            android:id="@+id/nav_informer"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/nav_informer" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_manage" />
    </group>

</menu>
