<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete"
        android:title="@string/action_delete"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete_all"
        android:title="@string/action_delete_all"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/title_activity_about"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_show_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/title_activity_settings"
        app:showAsAction="ifRoom"/>
</menu>
